k8s/dokuwiki-ingress.yaml
# kubectl -n cwe apply -f dokuwiki-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dokuwiki-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: wiki.k8s.local.m3
    http:
      paths:
      - path: /
        backend:
          serviceName: dokuwiki-dokuwiki
          servicePort: 80
  # - host: wiki.<hexid>
  #   http:
  #     paths:
  #     - path: /
  #       backend:
  #         serviceName: dokuwiki-dokuwiki
  #         servicePort: 80
